# ai_invest_agent

./: .env.example  .gitignore  README.md  pyproject.toml  stock_analysis.py
agents/: analyst.py  portfolio_manager.py  researcher.py
backtests/: __init__.py  metrics.py  runner.py
rag/: README.md  __init__.py  document_loader.py  retriever.py  vector_store.py
tools/: market_data.py  news_tool.py
