[project]
name = "ai-invest-agent"
version = "0.1.0"
description = "AI investment research agent"
authors = [
    {name = "continous-learner",email = "3417555490@qq.com"}
]
requires-python = "^3.12,<3.14"
dependencies = [
    "crewai (>=1.14.4,<2.0.0)",
    "yfinance (>=1.3.0,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
